--- a/package.json
+++ b/package.json
@@ -3,13 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.0",
+    "@hookform/resolvers": "^3.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "0.26.1",
+    "bootstrap": "5.1.3",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "2.2.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.48.2",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.20.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "sass": "1.49.10",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.20.0"
   }
 }
